--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ section{
 .header .navbar a:hover{
    background-color: var(--main-color);
    color: var(--sub-color);
+   transition: all 0.2s;
 }
 
 .home .box img{
@@ -155,9 +156,11 @@ section{
 .swiper-button-next,
 .swiper-button-prev{
    padding: 3rem 2rem;
+   font-weight: bold;
    background-color: var(--white);
    top: 40%;
-   opacity: .7;
+   opacity: .5;
+   border-radius: 3px;
 }
 
 .swiper-button-next::after,
@@ -252,6 +255,14 @@ section{
 .services .box-container .box{
    padding: 2rem;
    text-align: center;
+   border: 1px solid inset;
+   border-radius: 8px;
+}
+
+.services .box-container .box:hover{
+   border: 1px solid var(--sub-color);
+   transition: all 0.3s;
+   transform: translateY(-5px);
 }
 
 .services .box-container .box img{
